Discover Quest...
Now one class, find closest of any type
Show terrain in quest name to guide search